# week3-redis

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: __init__.py  admin.py  demo.py  health.py  kv.py  router.py  storefront.py
app/core/: __init__.py  hash_table.py
app/domain/: __init__.py  contracts.py  models.py  schemas.py
app/engine/: __init__.py  store.py
app/persistence/: __init__.py  aof.py  lifespan.py  repository.py  serialization.py  service.py
app/storefront/: __init__.py  catalog.py  seed_products.json  service.py
docs/: team-split.md
frontend/: app.js  index.html  nginx.conf  styles.css
scripts/: bench.py
tests/core/: test_hash_table.py
tests/engine/: test_store_engine.py
tests/integration/: conftest.py  test_admin.py  test_health.py  test_openapi.py  test_persistence_demo.py  test_storefront.py  test_stub_routes.py
tests/persistence/: test_snapshot_persistence.py
tests/storefront/: test_catalog.py
